--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </footer>
   </div>
 
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
