Update portfolio with real projects and contact info

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
           <div class="terminal-body">
             <p class="code-line"><span class="prompt">></span> initializing_system...</p>
-            <p class="code-line"><span class="prompt">></span> loading_dependencies: [Node.js, Docker, Kubernetes,
+            <p class="code-line"><span class="prompt">></span> loading_dependencies: [Laravel, PHP, Docker,
               SQL]...</p>
             <p class="code-line"><span class="prompt">></span> system_ready</p>
             <br>
@@ -89,7 +89,7 @@
               <div class="db-row"><span>01</span><span>PHP (Modern)</span><span>Expert</span></div>
               <div class="db-row"><span>02</span><span>Laravel</span><span>Expert</span></div>
               <div class="db-row"><span>03</span><span>MySQL/Redis</span><span>Advanced</span></div>
-              <div class="db-row"><span>04</span><span>Node.js</span><span>Intermediate</span></div>
+              <div class="db-row"><span>04</span><span>System Arch</span><span>Advanced</span></div>
             </div>
           </div>
           <div class="db-card">
@@ -146,6 +146,18 @@
       <section id="contact">
         <div class="section-title">
           <h2><span class="hash">#</span> ./send_message.sh</h2>
+        </div>
+        <div class="terminal-window small" style="margin-bottom: 2rem;">
+          <div class="terminal-header">
+            <span class="title">contact_info.txt</span>
+          </div>
+          <div class="terminal-body" style="color: var(--text-color);">
+            <p class="code-line"><span class="prompt">$</span> cat contact_info.txt</p>
+            <p class="code-line">Phone 1: <a href="tel:+201022348224"
+                style="color: var(--primary-color); text-decoration: none;">01022348224</a></p>
+            <p class="code-line">Phone 2: <a href="tel:+201107662959"
+                style="color: var(--primary-color); text-decoration: none;">01107662959</a></p>
+          </div>
         </div>
         <div class="terminal-window small">
           <div class="terminal-header">
