Update hardcoded projects in index.html

--- a/index.html
+++ b/index.html
@@ -120,26 +120,20 @@
         </div>
         <div class="logs-container">
           <div class="log-entry">
-            <div class="timestamp">[2023-PRESENT]</div>
-            <div class="log-level success">SUCCESS</div>
-            <div class="log-message">Developed scalable <strong>E-Commerce Platforms</strong> handling high traffic
-              volume. Optimized database queries.</div>
-            <div class="log-meta">Stack: Laravel, MySQL, Redis</div>
+            <div class="timestamp">[2024-PRESENT]</div>
+            <div class="log-level success">LIVE</div>
+            <div class="log-message">Developed <strong>Ana Wl Qdrat</strong> - An educational platform.</div>
+            <div class="log-meta">Stack: Laravel, PHP, MySQL | <a href="https://anawlqdrat.com/" target="_blank"
+                style="color: inherit; text-decoration: underline;">View Project</a></div>
           </div>
           <div class="log-entry">
-            <div class="timestamp">[2022-2023]</div>
-            <div class="log-level info">INFO</div>
-            <div class="log-message">Built comprehensive <strong>Educational Management Systems (LMS)</strong> for
-              automated student tracking and exams.</div>
-            <div class="log-meta">Stack: PHP, Livewire, Docker</div>
+            <div class="timestamp">[2023-2024]</div>
+            <div class="log-level info">DOCS</div>
+            <div class="log-message">Engineered documentation systems for <strong>Newaves Systems</strong>.</div>
+            <div class="log-meta">Stack: Laravel, PHP | <a href="https://docs.newaves-systems.com/" target="_blank"
+                style="color: inherit; text-decoration: underline;">View Project</a></div>
           </div>
-          <div class="log-entry">
-            <div class="timestamp">[2021-2022]</div>
-            <div class="log-level warn">SECURE</div>
-            <div class="log-message">Integrated multiple <strong>Payment Gateways (Saudi Arabia)</strong> ensuring PCI
-              compliance and secure transactions.</div>
-            <div class="log-meta">Stack: REST APIs, Third-party SDKs</div>
-          </div>
+
         </div>
       </section>
 
