--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
                 style="color: var(--primary-color); text-decoration: none;">01022348224</a></p>
             <p class="code-line">Phone 2: <a href="tel:+201107662959"
                 style="color: var(--primary-color); text-decoration: none;">01107662959</a></p>
+            <p class="code-line">Email: <a href="mailto:mostafaibrahim1712002@gmail.com"
+                style="color: var(--primary-color); text-decoration: none;">mostafaibrahim1712002@gmail.com</a></p>
+
           </div>
         </div>
         <div class="terminal-window small">
