--- a/index.html
+++ b/index.html
@@ -160,17 +160,18 @@
           <div class="terminal-header">
             <span class="title">mail_client</span>
           </div>
-          <form id="contact-form" class="terminal-body" onsubmit="event.preventDefault();">
+          <form id="contact-form" class="terminal-body">
             <div class="form-group">
-              <label for="email">enter_email:</label>
-              <input type="email" id="email" placeholder="user@domain.com" required>
+              <label for="contact-email">enter_email:</label>
+              <input type="email" id="contact-email" placeholder="user@domain.com" required>
             </div>
             <div class="form-group">
-              <label for="message">enter_message:</label>
-              <textarea id="message" rows="4" placeholder="Requesting connection..." required></textarea>
+              <label for="contact-message">enter_message:</label>
+              <textarea id="contact-message" rows="4" placeholder="Requesting connection..." required></textarea>
             </div>
             <button type="submit" class="btn-execute">SEND_PACKET</button>
           </form>
+
         </div>
       </section>
     </main>
