Update portfolio content: Dynamic projects, Servers, and Technical Summary

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
         <div class="code-block">
           <pre><code id="about-json">
 {
-  "name": "Mustafa Ibrahim El-Sayed",
+  "name": "Mostafa Ibrahim El-Sayed",
   "role": "Senior Backend Engineer",
-  "stack": ["PHP", "Laravel", "DevOps"],
-  "experience": "5 Years",
+  "stack": ["Laravel", "Python", "Node.js", "Vue.js"],
+  "experience": "Multi-Cloud & AI Integration",
   "location": "Egypt / Remote",
   "status": "Open for Work",
   "focus": [
     "High-Performance APIs",
-    "Server Management",
-    "Payment Gateway Integrations"
+    "Server Infrastructure",
+    "AI & Robotics Systems"
   ]
 }
             </code></pre>
@@ -86,29 +86,30 @@
             <div class="db-header">TABLE: BACKEND</div>
             <div class="db-content">
               <div class="db-row"><span>ID</span><span>TECH</span><span>LEVEL</span></div>
-              <div class="db-row"><span>01</span><span>PHP (Modern)</span><span>Expert</span></div>
-              <div class="db-row"><span>02</span><span>Laravel</span><span>Expert</span></div>
-              <div class="db-row"><span>03</span><span>MySQL/Redis</span><span>Advanced</span></div>
-              <div class="db-row"><span>04</span><span>System Arch</span><span>Advanced</span></div>
+              <div class="db-row"><span>01</span><span>Laravel (PHP)</span><span>Expert</span></div>
+              <div class="db-row"><span>02</span><span>Python / AI</span><span>Advanced</span></div>
+              <div class="db-row"><span>03</span><span>Node.js</span><span>Advanced</span></div>
+              <div class="db-row"><span>04</span><span>Vue.js</span><span>Advanced</span></div>
             </div>
           </div>
           <div class="db-card">
-            <div class="db-header">TABLE: DEVOPS</div>
+            <div class="db-header">TABLE: SERVERS</div>
             <div class="db-content">
-              <div class="db-row"><span>ID</span><span>TOOL</span><span>STATUS</span></div>
-              <div class="db-row"><span>01</span><span>Docker</span><span>Active</span></div>
-              <div class="db-row"><span>02</span><span>CI/CD</span><span>Configured</span></div>
-              <div class="db-row"><span>03</span><span>Linux Servers</span><span>Managed</span></div>
-              <div class="db-row"><span>04</span><span>AWS/DigitalOcean</span><span>Deployed</span></div>
+              <div class="db-row"><span>ID</span><span>PROVIDER</span><span>IP</span></div>
+              <div class="db-row"><span>01</span><span>Hetzner</span><span>213.239.209.180</span></div>
+              <div class="db-row"><span>02</span><span>DigitalOcean</span><span>146.190.77.121</span></div>
+              <div class="db-row"><span>03</span><span>GoogleCloud</span><span>34.67.253.105</span></div>
+              <div class="db-row"><span>04</span><span>AWS</span><span>16.170.22.44</span></div>
             </div>
           </div>
           <div class="db-card">
             <div class="db-header">TABLE: DOMAINS</div>
             <div class="db-content">
               <div class="db-row"><span>ID</span><span>SECTOR</span></div>
-              <div class="db-row"><span>01</span><span>E-Commerce</span></div>
-              <div class="db-row"><span>02</span><span>EdTech Platforms</span></div>
-              <div class="db-row"><span>03</span><span>FinTech / Payments</span></div>
+              <div class="db-row"><span>01</span><span>Islamic & Dawah</span></div>
+              <div class="db-row"><span>02</span><span>EdTech / Academies</span></div>
+              <div class="db-row"><span>03</span><span>AI & Robotics</span></div>
+
             </div>
           </div>
         </div>
@@ -119,20 +120,7 @@
           <h2><span class="hash">#</span> tail -f projects.log</h2>
         </div>
         <div class="logs-container">
-          <div class="log-entry">
-            <div class="timestamp">[2024-PRESENT]</div>
-            <div class="log-level success">LIVE</div>
-            <div class="log-message">Developed <strong>Ana Wl Qdrat</strong> - An educational platform.</div>
-            <div class="log-meta">Stack: Laravel, PHP, MySQL | <a href="https://anawlqdrat.com/" target="_blank"
-                style="color: inherit; text-decoration: underline;">View Project</a></div>
-          </div>
-          <div class="log-entry">
-            <div class="timestamp">[2023-2024]</div>
-            <div class="log-level info">DOCS</div>
-            <div class="log-message">Engineered documentation systems for <strong>Newaves Systems</strong>.</div>
-            <div class="log-meta">Stack: Laravel, PHP | <a href="https://docs.newaves-systems.com/" target="_blank"
-                style="color: inherit; text-decoration: underline;">View Project</a></div>
-          </div>
+          <!-- Projects will be loaded dynamically from projects.json -->
 
         </div>
       </section>
