Update projects data and implement grid layout UI

--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
         <div class="section-title">
           <h2><span class="hash">#</span> tail -f projects.log</h2>
         </div>
+
+        <div class="project-filters">
+          <button class="filter-btn active" data-filter="all">[ ALL ]</button>
+          <button class="filter-btn" data-filter="Islamic">[ ISLAMIC ]</button>
+          <button class="filter-btn" data-filter="Education">[ EDUCATION ]</button>
+          <button class="filter-btn" data-filter="Business">[ BUSINESS ]</button>
+        </div>
+
         <div class="logs-container">
           <!-- Projects will be loaded dynamically from projects.json -->
 
