Refine About section experience details

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   "name": "Mostafa Ibrahim El-Sayed",
   "role": "Senior Backend Engineer",
   "stack": ["Laravel", "Python", "Node.js", "Vue.js"],
-  "experience": "Multi-Cloud & AI Integration",
+  "experience": "Multi-Cloud, AI Integration, Backend Systems & APIs",
   "location": "Egypt / Remote",
   "status": "Open for Work",
   "focus": [
