Add profile picture with terminal scanner design

--- a/index.html
+++ b/index.html
@@ -38,17 +38,25 @@
             </div>
             <span class="title">main_process.exe</span>
           </div>
-          <div class="terminal-body">
-            <p class="code-line"><span class="prompt">></span> initializing_system...</p>
-            <p class="code-line"><span class="prompt">></span> loading_dependencies: [Laravel, PHP, Docker,
-              SQL]...</p>
-            <p class="code-line"><span class="prompt">></span> system_ready</p>
-            <br>
-            <h1 id="hero-text" class="glitch" data-text="BUILDING SCALABLE SYSTEMS"></h1>
-            <p class="cursor-line"><span class="blink">_</span></p>
+          <div class="terminal-body dashboard-layout">
+            <div class="terminal-text">
+              <p class="code-line"><span class="prompt">></span> initializing_system...</p>
+              <p class="code-line"><span class="prompt">></span> loading_dependencies: [Laravel, PHP, Docker, SQL]...
+              </p>
+              <p class="code-line"><span class="prompt">></span> system_ready</p>
+              <br>
+              <h1 id="hero-text" class="glitch" data-text="BUILDING SCALABLE SYSTEMS"></h1>
+              <p class="cursor-line"><span class="blink">_</span></p>
 
-            <div class="cta-container">
-              <a href="#projects" class="btn-execute">EXECUTE_VIEW_PROJECTS</a>
+              <div class="cta-container">
+                <a href="#projects" class="btn-execute">EXECUTE_VIEW_PROJECTS</a>
+              </div>
+            </div>
+            <div class="terminal-profile">
+              <div class="profile-frame">
+                <img src="./profile.jpg" alt="Mostafa Profile" class="profile-img">
+                <div class="scanner-line"></div>
+              </div>
             </div>
           </div>
         </div>
