Zoom out profile photo and bust image cache

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="terminal-profile">
               <div class="profile-frame">
-                <img src="./profile.jpg" alt="Mostafa Profile" class="profile-img">
+                <img src="./profile.jpg?v=2" alt="Mostafa Profile" class="profile-img">
                 <div class="scanner-line"></div>
               </div>
             </div>
