Add LinkedIn profile link to contact section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
                 style="color: var(--primary-color); text-decoration: none;">01107662959</a></p>
             <p class="code-line">Email: <a href="mailto:mostafaibrahim1712002@gmail.com"
                 style="color: var(--primary-color); text-decoration: none;">mostafaibrahim1712002@gmail.com</a></p>
+            <p class="code-line">LinkedIn: <a href="https://www.linkedin.com/in/mostafa-ibrahim-485492213/"
+                target="_blank"
+                style="color: var(--primary-color); text-decoration: none;">linkedin.com/in/mostafa-ibrahim</a></p>
 
           </div>
         </div>
