Add SEO meta tags, Open Graph, Twitter cards, and terminal favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,37 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mustafa | Backend Engineer</title>
+  <title>Mostafa Ibrahim | Senior Backend Engineer</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Mostafa Ibrahim - Senior Backend Engineer specializing in Laravel, PHP, Python, Node.js, and AI Integration. Building scalable systems for Islamic, EdTech, and Business platforms." />
+  <meta name="keywords"
+    content="Backend Engineer, Laravel Developer, PHP Developer, Python, Node.js, API Development, AI Integration, Full Stack, Egypt, Remote Developer" />
+  <meta name="author" content="Mostafa Ibrahim" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mostafa1712002.github.io/ibnaldamrdash/" />
+  <meta property="og:title" content="Mostafa Ibrahim | Senior Backend Engineer" />
+  <meta property="og:description"
+    content="Senior Backend Engineer specializing in Laravel, PHP, Python, and AI Integration. Building scalable systems." />
+  <meta property="og:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://mostafa1712002.github.io/ibnaldamrdash/" />
+  <meta name="twitter:title" content="Mostafa Ibrahim | Senior Backend Engineer" />
+  <meta name="twitter:description"
+    content="Senior Backend Engineer specializing in Laravel, PHP, Python, and AI Integration." />
+  <meta name="twitter:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg" />
+
+  <!-- Favicon - Terminal Style -->
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%230d1117' width='100' height='100' rx='15'/><text x='50' y='70' font-size='60' text-anchor='middle' fill='%2339d353'>$_</text></svg>" />
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="./style.css?v=2.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
