Fix profile image display and update social sharing image URLs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta property="og:title" content="Mostafa Ibrahim | Senior Backend Engineer" />
   <meta property="og:description"
     content="Senior Backend Engineer specializing in Laravel, PHP, Python, and AI Integration. Building scalable systems." />
-  <meta property="og:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg" />
+  <meta property="og:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg?v=2" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -28,7 +28,7 @@
   <meta name="twitter:title" content="Mostafa Ibrahim | Senior Backend Engineer" />
   <meta name="twitter:description"
     content="Senior Backend Engineer specializing in Laravel, PHP, Python, and AI Integration." />
-  <meta name="twitter:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg" />
+  <meta name="twitter:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg?v=2" />
 
   <!-- Favicon - Terminal Style -->
   <link rel="icon"
