Add Vue connectivity details and new project

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Mostafa Ibrahim - Senior Backend Engineer specializing in Laravel, PHP, Python, Node.js, and AI Integration. Building scalable systems for Islamic, EdTech, and Business platforms." />
+    content="Mostafa Ibrahim - Senior Backend Engineer & Vue.js developer connecting modern frontends to Laravel/PHP, Python, Node.js, and AI-powered backends. Building scalable systems for Islamic, EdTech, and Business platforms." />
   <meta name="keywords"
-    content="Backend Engineer, Laravel Developer, PHP Developer, Python, Node.js, API Development, AI Integration, Full Stack, Egypt, Remote Developer" />
+    content="Backend Engineer, Laravel Developer, PHP Developer, Python, Node.js, Vue.js, API Development, AI Integration, Full Stack, Egypt, Remote Developer" />
   <meta name="author" content="Mostafa Ibrahim" />
   <meta name="robots" content="index, follow" />
 
@@ -19,7 +19,7 @@
   <meta property="og:url" content="https://mostafa1712002.github.io/ibnaldamrdash/" />
   <meta property="og:title" content="Mostafa Ibrahim | Senior Backend Engineer" />
   <meta property="og:description"
-    content="Senior Backend Engineer specializing in Laravel, PHP, Python, and AI Integration. Building scalable systems." />
+    content="Senior Backend Engineer & Vue.js developer connecting frontends to Laravel APIs, with PHP, Python, Node.js, and AI Integration." />
   <meta property="og:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg?v=2" />
 
   <!-- Twitter -->
@@ -27,7 +27,7 @@
   <meta name="twitter:url" content="https://mostafa1712002.github.io/ibnaldamrdash/" />
   <meta name="twitter:title" content="Mostafa Ibrahim | Senior Backend Engineer" />
   <meta name="twitter:description"
-    content="Senior Backend Engineer specializing in Laravel, PHP, Python, and AI Integration." />
+    content="Senior Backend Engineer & Vue.js developer connecting frontends to Laravel APIs, with PHP, Python, Node.js, and AI Integration." />
   <meta name="twitter:image" content="https://mostafa1712002.github.io/ibnaldamrdash/profile.jpg?v=2" />
 
   <!-- Favicon - Terminal Style -->
@@ -100,15 +100,23 @@
           <pre><code id="about-json">
 {
   "name": "Mostafa Ibrahim El-Sayed",
-  "role": "Senior Backend Engineer",
+  "role": "Senior Backend Engineer & Vue.js Developer",
   "stack": ["Laravel", "Python", "Node.js", "Vue.js"],
-  "experience": "Multi-Cloud, AI Integration, Backend Systems & APIs",
+  "experience": "Multi-Cloud, AI Integration, Backend Systems & APIs, Vue.js Interfaces",
   "location": "Egypt / Remote",
   "status": "Open for Work",
   "focus": [
     "High-Performance APIs",
     "Server Infrastructure",
-    "AI & Robotics Systems"
+    "AI & Robotics Systems",
+    "Vue.js Dashboards"
+  ],
+  "connectivity": [
+    "Connect Vue.js SPAs/SSR to Laravel REST/GraphQL APIs",
+    "Laravel auth, permissions, and multi-tenancy",
+    "Real-time events via WebSockets/Broadcasting",
+    "Queues, schedulers, and background jobs",
+    "Payment gateways & 3rd-party integrations"
   ]
 }
             </code></pre>
